Fixed user info in topics on mobile.

--- a/assets/less/classes/forum/post.less
+++ b/assets/less/classes/forum/post.less
@@ -47,6 +47,7 @@
         margin: 2px;
         line-height: 1.2em;
         flex: 1 1 auto;
+        overflow: auto;
 
         @media (max-width: @site-mobile-width) {
             margin: 4px;
@@ -86,6 +87,12 @@
             &--tolerate-wide {
                 width: auto;
                 min-width: 150px;
+            }
+
+            @media (max-width: @site-mobile-width) {
+                width: 100%;
+                flex-direction: row;
+                padding: 10px;
             }
         }
 
